# virtualbox-manager

./: CMakeLists.txt  Config.vala.cmake  README.md
data/: CMakeLists.txt
schemas/: CMakeLists.txt  com.github.damienlniata.virtualbox-manager.gschema.xml
src/: Application.vala  CMakeLists.txt  MainWindow.vala  Settings.vala
src/Classes/: VirtualMachine.vala
src/Dialogs/: Preferences.vala  preferences.vala
src/Utils/: VboxCommands.vala
src/Views/: AllVmsView.ui  AllVmsView.vala  NoVboxView.vala  RunningVmsView.vala
src/Widgets/: VirtualMachineRow.vala
src/ui/: 1 non enregistré.glade
